...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Understood"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="defaultTitleKey" value="Understood"/>
...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Advanced Inspect Table"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Advanced Inspect" id="FHf-ag-VjH">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Klh-Ua-VMl">
                            <connections>
...
                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="go" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="url"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Domain Name or IP Address"/>
                                            </userDefinedRuntimeAttributes>
                                        </textField>
                                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xii-cx-wD1" userLabel="Advanced Button" customClass="OptionsButton" customModule="TLS_Inspector">
                                            <rect key="frame" x="334" y="18" width="20" height="20"/>
                                            <accessibility key="accessibilityConfiguration" label="Advanced Inspect Options Button"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="20" id="670-cV-Idj"/>
...
                        <barButtonItem key="leftBarButtonItem" title="Item" image="ellipsis.circle" id="jS6-Fj-Gad">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Options and About"/>
                            </userDefinedRuntimeAttributes>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Item" image="arrow.right.circle" largeContentSizeImage="Inspect" id="0qx-qm-eb4">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Inspect Domain"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Certificate Table"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Trust Details" id="2dW-jP-01K">
                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="GLB-dG-pWi">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Close"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Dismiss"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="defaultTitleKey" value="Dismiss"/>
...
