...
        } valueDidChange: { (value: String) in
            guard let port = UInt16.init(value) else { return }

            self.parameters.port = port
        }

        let ipAddressInput = InputTableViewCell.Cell(title: lang(key: "Host IP Address")) { (input: UITextField) in
            input.placeholder = lang(key: "Optional")
            input.keyboardType = .asciiCapable
            input.autocorrectionType = .no
            input.spellCheckingType = .no
            input.accessibilityLabel = "Host IP Address"
        } valueDidChange: { (value: String) in
...
