...
                label.textColor = themeTextColor;
            }
            return cell;
        } else {
            FAIcon icon = FATimesCircle;
            UIColor * color = uihelper.redColor;
            if ([status isEqualToString:@"Done"]) {
                icon = FACheckCircle;
                color = uihelper.greenColor;
            }
            return [[IconTableViewCell alloc] initWithIcon:icon color:color title:l(pending)];
        }
    } if (indexPath.section == 1) {
...
