...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="ebb-2b-pqe" id="2mb-Yj-wCX"/>
                            <outlet property="delegate" destination="ebb-2b-pqe" id="BoS-Nk-oGD"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="More Info" largeTitleDisplayMode="never" id="lBn-91-zis">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="titleKey" value="More Info"/>
                        </userDefinedRuntimeAttributes>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="QBZ-mK-PTw" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
