...
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Options Table"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="CDR-e3-isx" id="Xfa-ku-Rq3"/>
                            <outlet property="delegate" destination="CDR-e3-isx" id="hT8-4z-P9Y"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Options" id="ZUm-O7-pbb">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="titleKey" value="Options"/>
                        </userDefinedRuntimeAttributes>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
...
                                    </constraints>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <sections/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityUse" value="Advanced Options Table"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="Bem-Gj-gOM" id="Z9b-tw-J6l"/>
                            <outlet property="delegate" destination="Bem-Gj-gOM" id="TGa-pO-L5K"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Advanced Options" id="gPB-Jt-47r">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="titleKey" value="Advanced Options"/>
                        </userDefinedRuntimeAttributes>
                    </navigationItem>
                    <connections>
                        <segue destination="8c0-Ie-PtH" kind="presentation" identifier="RootCACertificates" modalPresentationStyle="fullScreen" id="EJg-yy-Pej"/>
...
                                        <rect key="frame" x="157" y="50" width="100" height="100"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="hjV-Wr-bW8"/>
                                            <constraint firstAttribute="width" constant="100" id="p9N-sV-ti8"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TLS Inspector" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nd5-4F-hhe">
                                        <rect key="frame" x="97.5" y="165" width="219.5" height="41"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
