...
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

import TLSKit

public enum CryptoEngine: String, Sendable, Codable {
    case NetworkFramework = "network_framework"
    case OpenSSL = "openssl"

    static func allValues() -> [CryptoEngine] {
        return [
            .NetworkFramework,
            .OpenSSL,
        ]
...
