...
import OpenSSL

/// Log message levels
public enum LogLevel: Int, Comparable {
    case Debug = 0
    case Information = 1
    case Warning = 2
    case Error = 3

    public func string() -> String {
        return String(describing: self)
    }

...
